error handled when story is null

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,6 @@
         "iframe",
         "inappwebview",
         "Inspectable"
-    ]
+    ],
+    "cmake.sourceDirectory": "C:/Users/SaiLaptop/Desktop/projects/flutter_tasks/daily_tech/windows/flutter"
 }
