--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0
+version: 1.0.1
 
 environment:
   sdk: '>=3.3.0 <4.0.0'
@@ -41,7 +41,8 @@ dependencies:
   url_launcher: ^6.3.0
   flutter_inappwebview: ^6.0.0
   meta: ^1.11.0
-
+  device_preview: ^1.2.0
+ 
 dev_dependencies:
   flutter_test:
     sdk: flutter
