--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,9 @@
 name: TechI
-description: "TechI is a mobile application built with Flutter that brings you the latest and most relevant tech news. The app uses the Hacker News original APIs to fetch news articles, providing a seamless and engaging user experience with features like pagination, theming, in-app webview, bookmarking, and efficient HTTP calls using isolates."
+description: "TechI is a mobile application built with Flutter that brings you
+  the latest and most relevant tech news. The app uses the Hacker News original
+  APIs to fetch news articles, providing a seamless and engaging user experience
+  with features like pagination, theming, in-app webview, bookmarking, and
+  efficient HTTP calls using isolates."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -28,27 +32,23 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  cupertino_icons: ^1.0.6
+  device_preview: ^1.2.0
   flutter:
     sdk: flutter
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.6
-  http: ^1.2.1
   flutter_bloc: ^8.1.6
-  shimmer: ^3.0.0
-  url_launcher: ^6.3.0
   flutter_inappwebview: ^6.0.0
-  meta: ^1.11.0
-  device_preview: ^1.2.0
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  http: ^1.2.1
+  meta: ^1.11.0
   path_provider: ^2.1.3
- 
+  share_plus: ^7.2.2
+  shimmer: ^3.0.0
+  url_launcher: ^6.3.0
+
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
+  build_runner: ^2.4.11
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -56,12 +56,12 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^3.0.0
+  flutter_test:
+    sdk: flutter
   hive_generator: ^2.0.1
-  build_runner: ^2.4.11
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
 # The following section is specific to Flutter packages.
 flutter:
 
@@ -69,18 +69,14 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
-
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
-
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
-
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
