--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: TechI
 description: "TechI is a mobile application built with Flutter that brings you
   the latest and most relevant tech news. The app uses the Hacker News original
   APIs to fetch news articles, providing a seamless and engaging user experience
-  with features like pagination, theming, in-app webview, bookmarking, and
+  with features like pagination, theming,article sharing in-app webview, bookmarking, and
   efficient HTTP calls using isolates."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -20,7 +20,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.2
+version: 1.0.3
 
 environment:
   sdk: '>=3.3.0 <4.0.0'
